add @media query

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="grid-container">
-            <div class="grid-60">
+            <div class="grid-60 mobile-grid-100 tablet-grid-100">
 
                 <div class="earn">
                     <div class="logo">
@@ -30,7 +30,7 @@
                 </div>
             </div>
 
-            <div class="grid-40">
+            <div class="grid-40 hide-on-mobile hide-on-tablet ">
                 <div class="earn-img">
                     <img src="img/banner-right.png" alt="">
                 </div>
@@ -40,7 +40,7 @@
     </header>
 
     <footer>
-        <div class="grid-container">
+        <div class="grid-container mobile-grid-100">
             <h1> &copy; Copyright | <a href="#">Disclaimer</a> | <a href="#">Privacy policy</a> | <a href="">toc</a>
             </h1>
             <p>powered by <a href="">codeclan</a></p>
